<resources>
    <string name="app_name">Pascal</string>
    <string name="text_hai">Hai</string>
    <string name="hello_name">Hello Name</string>
    <string name="btn_greeting">GREETING</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_back">BACK</string>
    <string name="txt_input_your_name">Your Name</string>
    <string name="txt_input_player_1_name">Player 1</string>
    <string name="txt_input_player_2_name">Player 2</string>
    <string name="icon_greeting">Icon Greeting</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="player_turn">Player Turn</string>
    <string name="btn_quit">QUIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="counter">0</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="mulailah_dengan_semangat_dan_senyuman">Mulailah dengan semangat dan senyuman</string>
    <string name="mulai">MULAI</string>
    <string name="pascal_app_by_enigma">Pascal App by Enigma</string>
    <string name="masukan_nama_kamu">Masukan nama kamu</string>
    <string name="masukkan_nama_kamu">Masukkan nama kamu</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang_nama_kamu">Selamat Datang</string>
    <string name="pascal_app">Pascal App</string>
    <string name="by_enigma">by Enigma</string>
    <string name="nama_kamu">Nama kamu</string>
    <string name="menu_aplikasi">Menu Aplikasi</string>
    <string name="menu_image">Image description</string>
    <string name="increment_decrement">Counter</string>
    <string name="detail">Detail</string>
    <string name="volume_balok">Balok</string>
    <string name="greeting">Greeting</string>
    <string name="home_nav">Home</string>
    <string name="profile_nav">Profile</string>
    <string name="contact_nav">Contact</string>
    <string name="profile">Profile</string>
    <string name="contact_list">Daftar Kontak</string>
    <string name="contact_form">Form Kontak</string>
    <string name="send_quote">Send Quote</string>
    <string name="selamat_sore">Selamat Sore</string>
    <string name="bank_prompt">Choose a Bank</string>
    <string name="image_contact">Image Contact</string>
    <string name="delete_icon_contact">Delete Icon Contact</string>
    <string name="add_contact_icon">Add Contact Icon</string>
    <string name="back_menu_icon">Back Menu Icon</string>
    <string name="nama_kontak">Nama kontak</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="simpan">SIMPAN</string>
    <string-array name="bank_arrays">
        <item name="bank_arrays">BCA</item>
        <item name="bank_arrays">Mandiri</item>
        <item name="bank_arrays">BRI</item>
        <item name="bank_arrays">BNI</item>
        <item name="bank_arrays">CIMB Niaga</item>
        <item name="bank_arrays">BTPN</item>
        <item name="bank_arrays">Permata</item>
    </string-array>
</resources>